# fastapi-contacts-api

./: .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 02358a4946e9_сreate_user_table.py  053c4b13537c_rename_contact_table_to_contacts.py  088f69177fe7_add_avatar_field_to_user.py  287cd79c3ac5_add_is_active_to_users.py  3a9357cd6e1d_initial_tables.py  4b49364ae844_added_roles.py
docs/: conf.py  index.rst
src/auth/: mail_utils.py  models.py  repository.py  routes.py  schemas.py  services.py
src/config/: cache.py  db.py  settings.py
src/contacts/: models.py  repository.py  routes.py  schemas.py
src/templates/: reset_password_email.html  verification_email.html
src/tests/: conftest.py  models_imports.py  test_main.py  test_routes_auth.py  test_routes_users.py  test_unit_repository_auth.py  test_unit_repository_contacts.py
src/users/: cloudinary_utils.py  repository.py  routes.py  schemas.py
